--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Hello World!</h1>
     <div id="holder">
-      Drag your file here
+      Drop your file here
     </div>
     <script src="./renderer.js"></script>
   </body>
